# cra-minidesk

./: .gitignore  README.md  docker-compose.yml
backend/: README.md  pom.xml
backend/src/main/resources/: application.yml
backend/src/test/resources/: application-test.yml
desktop/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/app/: App.tsx  BackendStatusContext.ts  BackendStatusProvider.tsx  providers.tsx  router.tsx  useBackendStatusContext.ts
desktop/src/components/feedback/: EmptyState.tsx  ErrorState.tsx  FeedbackState.module.css  LoadingState.tsx  NotificationBanner.module.css  NotificationBanner.tsx  PlaceholderPage.module.css
desktop/src/components/layout/: AppLayout.module.css  AppLayout.tsx  Sidebar.module.css  Sidebar.tsx  TopBar.module.css  TopBar.tsx
desktop/src/lib/: env.ts  queryClient.ts
desktop/src/lib/api/: apiClient.ts  (+3 more)
desktop/src/pages/: NotFoundPage.tsx
desktop/src/styles/: globals.css  tokens.css
desktop/src/test/: AppLayout.test.tsx  CustomersPage.test.tsx  DashboardPage.test.tsx  DevicesPage.test.tsx  RepairOrdersPage.test.tsx  apiClient.test.ts  customerApi.test.ts  customerSearch.test.ts  deviceApi.test.ts  env.test.ts  mutationInvalidation.test.tsx  repairOrderApi.test.ts  selectorHardening.test.ts  setup.ts
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ROADMAP.md  SECURITY.md
(+173 files in other folders)
