[package]
name = "cra-minidesk-desktop"
version = "0.1.0"
description = "CRA MiniDesk Computer Repair & Service Management Client"
authors = ["Berke Emre Deveci"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
